Fixed Music page album collapse on click

--- a/react-app/src/app/Styles/music-styles.css
+++ b/react-app/src/app/Styles/music-styles.css
@@ -124,6 +124,14 @@
   }
 }
 
+.artist-item {
+  -webkit-user-select: none; /* Safari */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+ */
+  user-select: none; /* Standard */
+  cursor: pointer;
+}
+
 .artist-item ul {
   list-style-type: disc;
   color: #ddd;
